--- a/_includes/documentation/introduction-oxidandtheaffilinetmodule.html
+++ b/_includes/documentation/introduction-oxidandtheaffilinetmodule.html
@@ -1,13 +1,9 @@
----
-layout: onepager
-title: Oxid Module
----
+<p>You have chosen the affilinet module for your OXID eShop. This module facilitates your daily work
+by integrating essential functionalities of our affilinet platform into your usual store.</p>
 
-<p>You have chosen the affilinet module for your OXID eShop. This module facilitates your daily work by integrating essential functionalities of our affilinet platform into your usual store.</p>
-
-<p>The affilinet module enables you to integrate important affiliate marketing features into your Magento OXID eShop. Affilinet presents performance marketing, an attractive, success-based payment model for users directed to your website, high quality, transparent tracking and reporting as well as a sales
+<p>The affilinet module enables you to integrate important affiliate marketing features into your OXID eShop. Affilinet presents performance marketing, an attractive, success-based payment model for users directed to your website, high quality, transparent tracking and reporting as well as a sales
 network with 500.000 publishers (website operators, promoting your products online). This module offers you new customer potentials to expand your reach.</p>
-<p><strong>Using this module offers you concretely:</strong></p>
+<p><b>Using this module offers you concretely:</b></p>
 <ol>
 <li>an easy providing of product data feeds to promote your products via dynamically generated ads</li>
 <li>retargeting of (non-purchasing) store visitors</li>
@@ -16,4 +12,4 @@ network with 500.000 publishers (website operators, promoting your products onli
 </ol>
 
 <p>Besides the fully integrated process of affiliate marketing functionalities within the module, you can always login to the affilinet advertiser portal (<a href="https://advertiser.affili.net" target="_blanc">https://advertiser.affili.net</a>) for using the additional affilinet options.</p>
-
+<p><img src="../assets/img/oxidintro.png" class="img-responsive img-thumbnail"></p>
