Added Installation to the documentation page

--- a/_includes/documentation/introduction-supportedoxideditions.html
+++ b/_includes/documentation/introduction-supportedoxideditions.html
@@ -1,4 +1,4 @@
-<p><b>The affilinet module supports the following editions:<b>
+<p><b>The affilinet module supports the following editions:</b></p>
 <ol>
 <li>OXID eShop CE (Community Edition) versions 4.5, 4.6, 4.7, 4.8</li>
 <li>OXID eShop PE (Professional Edition) versions 4.5, 4.6, 4.7, 4.8</li>
