Added images to documentation page

--- a/_includes/documentation/settings-feedgenerator.html
+++ b/_includes/documentation/settings-feedgenerator.html
@@ -1,13 +1,23 @@
 <p>The feed generator creates an affilinet matching product feed, based on your OXID eShop product database. You can check this feed in a few steps and submit it to affilinet. On the basis of this product datafeed publishers can build dynamic product ads and deliver them to specific target groups. So customers with a special product desire will come to your store.</p>
-<ul>
-<li><b>Step 1 - Configuration:</b> Besides the affilinet standard feed you are able to create publisher individual product datafeeds (e. g.  for Valentine's Day, Easter or Christmas promotions).</li>
-<li><b>Step 2 - Preview/Export:</b> You can view the data of your feed, created in the first step, with a preview and generate a csv export.</li>
-<li><b>Step 3 - Cronjob Settings:</b> Here you can specify when the cronjob should start to create the configured product feed and place it on your server as csv file. </li>
-<li><b>Step 4 - Finish:</b> Feed name, feed logo, start time of the cronjob and the feed link will be displayed for checking. As soon as your data will be checked you can click the button "submit the feed to affilinet" („Produktdaten an Affili.net senden“) and your data will be submitted.</li>
+<p>OXID eShop (Backend) &gt; Affilinet &gt; Feed Generator</p>
+<p><img src="../assets/img/productfeed.png" class="img-responsive img-thumbnail"></p>
+
+<h4><span style=" color: #90005B">How to setup a product feed?</span></h4><ul>
+<li><b>Step 1 - Configuration:</b> Besides the affilinet standard feed you are able to create publisher individual product datafeeds (e. g.  for Valentine's Day, Easter or Christmas promotions).
+<p><img src="../assets/img/feedconfiguration.png" class="img-responsive img-thumbnail"></p>
+</li>
+<li><b>Step 2 - Preview/Export:</b> You can view the data of your feed, created in the first step, with a preview and generate a csv export.
+<p><img src="../assets/img/feedconfigpreview.png" class="img-responsive img-thumbnail"></p>
+</li>
+<li><b>Step 3 - Cronjob Settings:</b> Here you can specify when the cronjob should start to create the configured product feed and place it on your server as csv file.
+<p><img src="../assets/img/feedcronjob.png" class="img-responsive img-thumbnail"></p>
+</li>
+<li><b>Step 4 - Finish:</b> Feed name, feed logo, start time of the cronjob and the feed link will be displayed for checking. As soon as your data will be checked you can click the button "submit the feed to affilinet" („Produktdaten an Affilinet senden“) and your data will be submitted.
+<p><img src="../assets/img/feedconfigfinish.png" class="img-responsive img-thumbnail"></p>
+</li>
 </ul>
 
 <p>The affilinet product data team will now check your feed and enable feed submission deferred to the defined setting terms. So your product datafeed is always up to date.</p>
-<p>OXID eShop (Backend) &gt; Affilinet &gt; Feed Generator</p>
 
 <p>The feed generator provides various options for item feed configuration.</p>
 
