--- a/_includes/documentation/settings-registration.html
+++ b/_includes/documentation/settings-registration.html
@@ -2,3 +2,4 @@
 
 <p>Affilinet will check your application and will provide all necessary documents on acceptance.</p>
 <p>OXID eShop (Backend) &gt; Affilinet > Voranmeldung (Registration)</p>
+<p><img src="../assets/img/registration.png" class="img-responsive img-thumbnail"></p>
