--- a/_includes/documentation/settings-statistics.html
+++ b/_includes/documentation/settings-statistics.html
@@ -1,6 +1,10 @@
 <p>In the statistics module area you get an overview about the performance of your affilinet publishers. As well as for orders you can select in detail what information for what period should be displayed.</p>
+<p>OXID eShop (Backend)  &gt; Affilinet &gt; Statistics (Statistiken)</p>
+<p><img src="../assets/img/statistics.png" class="img-responsive img-thumbnail"></p>
 
 <p>Based on your filter criteria the statistic displays the publisher URL as well as generated views, clicks, leads/sales and commissions.</p>
-<p>OXID eShop (Backend)  &gt; Affilinet &gt; Statistics (Statistiken)</p>
+<p><img src="../assets/img/statisticsresult.png" class="img-responsive img-thumbnail"></p>
 
-<div class="well well-sm">Please note: The statistics are submitted through affilinet webservices. If you didn’t provide your affilinet webservice login data in the module area, no data will be delivered.</div>
+<div role="alert" class="alert alert-info">
+<strong>Please note:</strong> The statistics are submitted through affilinet webservices. If you didn’t provide your affilinet webservice login data in the module area, no data will be delivered.
+</div>
